package interfaces.menu;

import javax.swing.*;
import java.awt.*;

public interface IMenu {
    public Font loadFont(float size);
    public JButton crearBotonMenu(String text);
}
